crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_direct.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
decodeUtf8 (encodeUtf8 "héllo")
--- unoptimized UPLC
(program 1.1.0
  [(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]])
--- optimized Core
"héllo"
--- optimized UPLC
(program 1.1.0 (con string "héllo"))
--- isolated pass
--- core before
decodeUtf8 (encodeUtf8 "héllo")
--- uplc before
(program 1.1.0
  [(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]])
--- core after
"héllo"
--- uplc after
(program 1.1.0 (con string "héllo"))
--- result
(con string "héllo")
--- logs
[]
