crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_oversaturated.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
decodeUtf8 (encodeUtf8 "héllo") 1
--- unoptimized UPLC
(program 1.1.0
  [[(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]]
    (con integer 1)])
--- optimized Core
"héllo" 1
--- optimized UPLC
(program 1.1.0 [(con string "héllo") (con integer 1)])
--- isolated pass
--- core before
decodeUtf8 (encodeUtf8 "héllo") 1
--- uplc before
(program 1.1.0
  [[(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]]
    (con integer 1)])
--- core after
"héllo" 1
--- uplc after
(program 1.1.0 [(con string "héllo") (con integer 1)])
--- result
error: NonFunctionApplication(Con(Integer(1)), Con(String("héllo")))
--- logs
[]
