crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
decodeUtf8 (encodeUtf8 "héllo")
--- unoptimized UPLC
(program 1.1.0
  [(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]])
--- optimized Core
let anf#1 : bytes = encodeUtf8 "héllo" in
decodeUtf8 anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin decodeUtf8) anf_2])
    [(builtin encodeUtf8) (con string "héllo")]])
--- isolated pass
--- core before
decodeUtf8 (encodeUtf8 "héllo")
--- uplc before
(program 1.1.0
  [(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]])
--- core after
decodeUtf8 (encodeUtf8 "héllo")
--- uplc after
(program 1.1.0
  [(builtin decodeUtf8) [(builtin encodeUtf8) (con string "héllo")]])
--- result
(con string "héllo")
--- logs
[]
