crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_reverse.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
encodeUtf8 (decodeUtf8 (con bytestring #68c3a96c6c6f))
--- unoptimized UPLC
(program 1.1.0
  [(builtin encodeUtf8) [(builtin decodeUtf8) (con bytestring #68c3a96c6c6f)]])
--- optimized Core
let anf#1 : string = decodeUtf8 (con bytestring #68c3a96c6c6f) in
encodeUtf8 anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin encodeUtf8) anf_2])
    [(builtin decodeUtf8) (con bytestring #68c3a96c6c6f)]])
--- isolated pass
--- core before
encodeUtf8 (decodeUtf8 (con bytestring #68c3a96c6c6f))
--- uplc before
(program 1.1.0
  [(builtin encodeUtf8) [(builtin decodeUtf8) (con bytestring #68c3a96c6c6f)]])
--- core after
(con bytestring #68c3a96c6c6f)
--- uplc after
(program 1.1.0 (con bytestring #68c3a96c6c6f))
--- result
(con bytestring #68c3a96c6c6f)
--- logs
[]
