crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_utf8_wrong_kind.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
decodeUtf8 (encodeUtf8 false)
--- unoptimized UPLC
(program 1.1.0 [(builtin decodeUtf8) [(builtin encodeUtf8) (con bool False)]])
--- optimized Core
let anf#1 : bytes = encodeUtf8 false in
decodeUtf8 anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin decodeUtf8) anf_2])
    [(builtin encodeUtf8) (con bool False)]])
--- isolated pass
--- core before
decodeUtf8 (encodeUtf8 false)
--- uplc before
(program 1.1.0 [(builtin decodeUtf8) [(builtin encodeUtf8) (con bool False)]])
--- core after
decodeUtf8 (encodeUtf8 false)
--- uplc after
(program 1.1.0 [(builtin decodeUtf8) [(builtin encodeUtf8) (con bool False)]])
--- result
error: Runtime(TypeMismatch(String, Boolean(false)))
--- logs
[]
