crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__reverse_valid.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
iData (unIData (con data (I 42)))
--- unoptimized UPLC
(program 1.1.0 [(builtin iData) [(builtin unIData) (con data (I 42))]])
--- optimized Core
let anf#1 : int = unIData (con data (I 42)) in
iData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin iData) anf_2]) [(builtin unIData) (con data (I 42))]])
--- isolated pass
--- core before
iData (unIData (con data (I 42)))
--- uplc before
(program 1.1.0 [(builtin iData) [(builtin unIData) (con data (I 42))]])
--- core after
(con data (I 42))
--- uplc after
(program 1.1.0 (con data (I 42)))
--- result
(con data (I 42))
--- logs
[]
